:FIX spacing partners

--- a/css/main.scss
+++ b/css/main.scss
@@ -423,7 +423,7 @@ section.summary{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 260px;
+    min-height: 260px;
 
     >*{
         display: block;
